security-group.tf
#create security group - ssh traffic
resource "aws_security_group" "vpc-ssh" {
    name = "vpc-ssh"
    description = "dev vpc ssh"
    ingress {
        description = "allow port 22"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        description = "allow port 22"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
